cookie consent + fixes

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,4 +32,8 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+
+  <script src="{{ site.url }}/public/js/jscookie.js"></script>
+  <!-- Consentua WebSDK -->
+  <script src="https://websdk.consentua.com/websdk/consentua-embed.js.php"></script>
 </head>
