--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,6 @@
     <div class="content container">
       {{ content }}
     </div>
-    {% include analytics.html %}
+    {% include cookie-consent.html %}
   </body>
 </html>
