--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item" href="{{ site.home }}">Home</a>
 
-      <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ site.url }}">Blog</a>
+      <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ site.baseurl }}">Blog</a>
 
       {% assign pages_list = site.pages %}
       {% for node in pages_list %}
@@ -29,7 +29,7 @@
     </nav>
 
     <footer class="sidebar-footer">
-    <p><a href="https://consentua.com/policy.html">Privacy Policy</a></p>
+    <p><a href="https://consentua.com/privacy-policy.html">Privacy Policy</a></p>
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
     </footer>
   </div>
