cuid ga user id

--- a/_includes/cookie-consent.html
+++ b/_includes/cookie-consent.html
@@ -141,7 +141,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'UA-74260509-3');
-      
+      gtag('set', {'user_id': cuid}); // Set the user ID
       document.getElementById('cookie-consent').style.display = "none";
     }
 
