--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,7 +33,7 @@
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
-  <script src="{{ site.url }}/public/js/jscookie.js"></script>
+  <script src="{{ site.baseurl }}/public/js/jscookie.js"></script>
   <!-- Consentua WebSDK -->
   <script src="https://websdk.consentua.com/websdk/consentua-embed.js.php"></script>
 </head>
