--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <div class="content container">
       {{ content }}
     </div>
+    {% include footer.html %}
     {% include cookie-consent.html %}
   </body>
 </html>
