--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,19 +34,19 @@ layout: default
 <h2>Share This</h2>
   <!-- Twitter (url, text, @mention) -->
   <a class="share-btn twitter" href="http://twitter.com/share?url={{ site.baseurl }}{{ page.url }}&text={{ page.title }}&via=consentua">
-      <i class="fa fa-fw fa-twitter" aria-hidden="true"></i>
+      <i class="fab fa-fw fa-twitter" aria-hidden="true"></i>
   </a>
   <!-- LinkedIn (url, title, summary, source url) -->
   <a class="share-btn linkedin" href="http://www.linkedin.com/shareArticle?mini=true&url={{ site.baseurl }}{{ page.url }}&title={{ page.title }}&summary={{ page.title }}&source=consentua.com">
-      <i class="fa fa-fw fa-linkedin" aria-hidden="true"></i>
+      <i class="fab fa-fw fa-linkedin" aria-hidden="true"></i>
   </a>
   <!-- Facebook (url) -->
   <a class="share-btn facebook" href="http://www.facebook.com/sharer/sharer.php?u={{ site.baseurl }}{{ page.url }}">
-      <i class="fa fa-fw fa-facebook" aria-hidden="true"></i>
+      <i class="fab fa-fw fa-facebook" aria-hidden="true"></i>
   </a>
   <!-- Reddit (url, title) -->
   <a class="share-btn reddit" href="http://reddit.com/submit?url={{ site.baseurl }}{{ page.url }}&title={{ page.title }}">
-      <i class="fa fa-fw fa-reddit-alien" aria-hidden="true"></i>
+      <i class="fab fa-fw fa-reddit-alien" aria-hidden="true"></i>
   </a>
 </div>
 
