--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,4 +37,13 @@
   <script src="{{ site.baseurl }}/public/js/jscookie.js"></script>
   <!-- Consentua WebSDK -->
   <script src="https://websdk.consentua.com/websdk/consentua-embed.js.php"></script>
+
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LZQNF5PZLQ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-LZQNF5PZLQ');
+  </script>
 </head>
